--- a/accounts/templates/accounts/account_list.html
+++ b/accounts/templates/accounts/account_list.html
@@ -1,22 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Account List</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-    <div class="container">
-        <h2>Account List</h2>
-        <ul class="list-group">
-            {% for account in accounts %}
-                <li class="list-group-item">
-                    <a href="{% url 'account_detail' account.id %}">{{ account.account_number }}</a> - Balance: {{ account.balance }}
-                </li>
-            {% endfor %}
-        </ul>
-        <a href="{% url 'create_account' %}" class="btn btn-primary mt-3">Create New Account</a>
-    </div>
-</body>
-</html>
+{% extends 'accounts/base.html' %}
+
+{% block title %}Your Accounts{% endblock %}
+
+{% block content %}
+<h2>Your Accounts</h2>
+<ul>
+    {% for account in accounts %}
+    <li>
+        <a href="{% url 'account_detail' account.id %}">{{ account.account_number }}</a> - Balance: {{ account.balance }}
+    </li>
+    {% endfor %}
+</ul>
+<a href="{% url 'create_account' %}">Create a new account</a>
+{% endblock %}
