--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -11,7 +11,7 @@
         <a href="{% url 'logout' %}">Logout</a>
     {% else %}
         <a href="{% url 'login' %}">Login</a>
-        <a href="{% url 'register' %}">Register</a>
+        <a href="{% url 'signup' %}">Sign Up</a>
     {% endif %}
 </body>
 </html>
